2005-02-24 nalin
	* src/logstdio.c: add a log_progname global to adjust log messages.
	* src/afs5log.c,src/harness.c: set log_progname at startup.
	* src/prompter.c: suppress prompts for the previously-entered password.
	* src/userinfo.c: clean up some valgrind-caught weirdness.
	* src/harness.c: use getpass() instead of fgets() for
	PAM_PROMPT_ECHO_OFF prompts.  Kids, don't try that at home.
	* src/sly.c: only refresh the default krb5 ccache if its principal is
	the one we've authenticated.
	* src/tokens.c: log a debug message if we create a new PAG.  When
	determining the user's home cell, if the user's home directory is a
	symlink, chase it.
2005-02-24 nalin
	* configure.ac: add a --enable-default-keytab-location flag.
	* src/options.c,src/pam_krb5.5.in,src/pam_krb5.8.in: obey it.
	* README: document that it can be overridden.  (Don't want to change
	this to README.in to actually reflect that override value.)
	* src/v4.c(v4_get_creds): error out if password is NULL or zero-length.
	* src/v5.c(v5_get_creds): provide the prompter callback to libkrb5.
	* src/options.c: add an "initial_prompt"/"no_initial_prompt" option
	which suppresses the initial password prompt.  It's useless for
	providing a PAM_AUTHTOK to subsequent modules, but is useful now that
	we're providing a prompter callback to libkrb5.
	* src/auth.c: handle no_initial_prompt cases.  Get AFS tokens if the
	saved password turned out to be correct.
	* src/log.c: fix a few memory leaks.
	* src/harness.c: add, to make debugging easier.
2005-02-23 nalin
	* src/init.c: don't call initialize_krb5_error_table; this currently
	leads to a crash due to libkrb5 from MIT's 1.4 release making an
	invalid assumption about e2fsprogs 1.36's libcom_err (SF #1150146)
2005-02-14 nalin
	* src/stash.c,src/stash.h: add a field to the stash structure for
	keeping of whether or not we set the KRB5CCNAME/KRBTKFILE environment
	variables
	* src/session.c: clear KRB5CCNAME/KRBTKFILE if we're removing the